# chess

./: .gitignore  CMakeLists.txt  README.md  SFML_demo  install.sh  play.sh
assets/: window_init.txt
header_files/: Entity.hpp  Game.hpp  GameState.hpp  State.hpp
headers/: AssetManager.hpp  Bishop.hpp  Button.hpp  Chess.hpp  Enums.hpp  Game.hpp  GameContext.hpp  GameEngine.hpp  King.hpp  Knight.hpp  MainMenu.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  Rook.hpp  State.hpp  StateManager.hpp  Tile.hpp
include/: State.hpp
libraries/SFML-2.5.1/include/SFML/: Config.hpp
src/: AssetManager.cpp  Bishop.cpp  Button.cpp  Chess.cpp  Entity.cpp  Game.cpp  Game.hpp  GameEngine.cpp  GameState.cpp  King.cpp  Knight.cpp  MainMenu.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  State.cpp  StateManager.cpp  Tile.cpp  main.cpp
